--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
         <div class="icon icon-twitter"></div>Twitter
       </div>
     </a>  -->
-    <a class="mobile-stretch"
+    <!-- <a class="mobile-stretch"
            href="https://instagram.com/btlhart"
            target="_blank">
       <div class="primary-btn sides-8 mobile-stretch">
         <div class="icon icon-instagram"></div>Instagram
       </div>
-    </a>
+    </a> -->
     </div>
   </div><!-- End Hero -->
   <!-- Spacer -->
@@ -98,7 +98,7 @@
   <div class="content-container">
        <div class="work-date top-32"
          style="text-transform: uppercase;color:#c1c1c1">
-      Current Projects<br><br>
+      Current<br><br>
     </div>
     <!-- Spectacular -->
     <div class="container-timeline">
@@ -125,40 +125,15 @@
           &nbsp;
         </div>
         <div class="work-subtitle-h1">
-          <b>Agency Owner</b> — Digital product and creative agency 
-          <!-- <a class="secondary-link" style="display: inline-block;" href="https://digital-ranch.webflow.io" target="_blank">digitalranch.co</a> -->
+          <b>Agency</b> — Growth-focused design agency
+          <br><br><a class="secondary-link" style="display: inline-block;" href="https://digitalranch.co/" target="_blank">digitalranch.co</a>
+          <div class="about-text">          
+          <br>DigitalRanch is supporting the next generation of entrepreneurs, the world’s biggest brands, and everyone in&nbsp;between.
+          
+          <br><br>We've designed A.I. companies, customer-facing brand experiences, internal tools, external websites, pitches, stories, and strategies earning our customers&nbsp;millions.
+          
+          <br><br>Welcome to DigitalRanch. A robust design agency with a simple-as-pie structure and a home-cooked&nbsp;feel.
         </div>
-        <div class="top-64"></div>
-      </div>
-    </div>
-    <!-- End Spectacular -->
-    <!-- Spectacular -->
-    <div class="container-timeline">
-      <div class="timeline-ruler">
-        <div class="ruler-badge">
-          <div class="icon icon-work"
-               style="margin: 0;"></div>
-        </div>
-        <div class="ruler-border">
-          &nbsp;
-        </div>
-      </div>
-      <div class="timeline-work">
-        <div class="work-header">
-          <div class="work-title">
-            Spec
-          </div>
-          <!-- <div class="work-date">
-            2022 - Present
-          </div> -->
-        </div>
-        <div class="work-hero"
-             style="background-image: url(images/hero-spec.png);">
-          &nbsp;
-        </div>
-        <div class="work-subtitle-h1">
-          <b>Indie Founder</b> — Music app 
-          <br><br><a class="secondary-link" style="display: inline-block;" href="http://getspec.app" target="_blank">getspec.app</a>
         </div>
         <div class="top-64"></div>
       </div>
@@ -173,7 +148,7 @@
   <div class="content-container">
     <div class="work-date top-32"
       style="text-transform: uppercase;color:#c1c1c1">
-   Previous Work<br><br>
+   Previous<br><br>
  </div>
  
  <!-- ThirdLine -->
@@ -201,7 +176,7 @@
        &nbsp;
      </div>
      <div class="work-subtitle-h1">
-       <b>Product Strategy Consultant</b> — Early stage product development, design, and marketing
+       <b>Product Strategy & Design</b> — Early stage product design
        <br><br><a class="secondary-link" style="display: inline-block;" href="http://thirdline.io" target="_blank">thirdline.io</a>
      </div>
      <div class="top-64"></div>
@@ -233,7 +208,7 @@
        &nbsp;
      </div>
      <div class="work-subtitle-h1">
-       <b>Design Consultant</b> — Designer/Developer expanding internal Learning Management System (LMS)
+       <b>Design Consultant</b> — Learning Management System (LMS) design
        <br><br><a class="secondary-link" style="display: inline-block;" href="http://getspec.app" target="_blank">bcg.com</a>
      </div>
      <!-- <div class="system-note top-32">
@@ -388,7 +363,7 @@
      </div> -->
      <div class="work-date top-48"
       style="text-transform: uppercase;color:#c1c1c1">
-      Crossing the Chasm
+      Featured Work
      </div>
      <div class="card-prototype-container">
        <div class="card-prototype-columnns top-24"
@@ -557,7 +532,7 @@
        &nbsp;
      </div>
      <div class="work-subtitle-h1">
-       <b>Startup Accelerator Team Member</b> — Pitch, branding, and product design for startup accelerator cohort companies
+       <b>Startup Accelerator</b> — Cohort company pitch and product design
        <br><br><a class="secondary-link" style="display: inline-block;" href="http://techstars.com" target="_blank">techstars.com</a>
      </div>
      <div class="top-64"></div>
@@ -589,7 +564,7 @@
        &nbsp;
      </div>
      <div class="work-subtitle-h1">
-       <b>"Off The Wall Pass" Interactive Design</b> — US Open of Surfing experiential marketing digital activation
+       <b>"Off The Wall Pass"</b> — US Open of Surfing experiential marketing activation
        <br><br><a class="secondary-link" style="display: inline-block;" href="http://vans.com" target="_blank">vans.com</a>
      </div>
      <!-- <div class="work-thumbnails top-32">
